# Euripus

./: .dockerignore  .env.homelab-images.example  .env.selfhosted-images.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.homelab.nordvpn.yml  docker-compose.homelab.yml  docker-compose.selfhosted.mullvad.yml  docker-compose.selfhosted.nvidia.yml  docker-compose.selfhosted.yml  docker-compose.yml  package.json  preformance_improvements.md  sports-api.md  tsconfig.base.json
.pi/skills/euripus-search-rules/references/: live-db-queries.md
apps/android-tv-native/: README.md  gradlew  gradlew.bat  settings.gradle.kts
apps/android-tv-native/app/: build.gradle.kts  proguard-rules.pro
apps/android-twa/: README.md  assetlinks.template.json  bubblewrap.config.json
apps/client/: components.json  package.json  vite.config.ts
apps/client/public/: offline.html  sw.js
apps/client/src/: index.css  main.tsx  router.test.tsx  router.tsx
apps/client/src/hooks/: use-category-favorite.ts  use-channel-favorite.ts  use-playback-actions.ts  use-ppv-favorite.ts  use-remote-control-state.ts
apps/client/src/lib/: api.ts  cast-playback.test.ts  cast-playback.ts  google-cast-receiver.ts  google-cast.ts  hls.test.ts  hls.ts  pwa.ts  (+12 more)
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: manifest.webmanifest
apps/desktop/src/: index.css  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.user-test.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  .env.mullvad.example  .env.nordvpn.example  .gitignore  Cargo.toml  Dockerfile
apps/server/migrations/: 0001_init.sql  0002_sync_performance_indexes.sql  0003_user_guide_preferences.sql  0004_epg_sources.sql  0005_sync_progress_daily_schedule_and_search_indexes.sql  0006_provider_playback_mode.sql  0007_program_search_optimizations.sql  0008_backfill_program_search_documents.sql  0009_search_and_session_indexes.sql  0010_drop_search_document_gin_indexes.sql  0011_sync_and_guide_indexes.sql  0012_remote_playback.sql  0013_receiver_mode.sql  0014_drop_legacy_remote_playback.sql  0015_favorite_channel_categories.sql  0016_favorite_sort_order.sql  0017_receiver_playback_status_overhaul.sql  0018_receiver_public_origin.sql  0019_admin_search_rules.sql  0020_admin_provider_country_relations.sql  0021_favorite_ppv_channels.sql  0022_multi_provider_profiles.sql  0023_restricted_managed_accounts.sql  0024_one_active_sync_job_per_profile.sql  0025_on_demand_catalog.sql  0026_filter_on_demand_catalog.sql  0027_on_demand_favorites_google_calendar.sql  0028_quality_channel_prefixes.sql  0029_quality_channel_settings.sql  0030_active_provider.sql  0031_admin_no_event_tools.sql  0032_on_demand_playback_history.sql  0033_provider_labels_and_content_selections.sql
apps/server/src/: config.rs  epg.rs  lib.rs  main.rs  server_main.rs  xmltv.rs  xtreme.rs
apps/server/src/server_main/: admin.rs  app.rs  auth.rs  error.rs  google_calendar.rs  guide.rs  on_demand.rs  provider.rs  receiver.rs  relay.rs  sports.rs  state.rs  transcode.rs
apps/server/src/server_main/playback/: mod.rs  relay_tokens.rs  resolve.rs
apps/server/src/server_main/search/: ai_ppv.rs  indexing.rs  lexicon.rs  mod.rs  queries.rs  rules.rs
apps/server/src/server_main/sync/: mod.rs  persistence.rs  runner.rs  scheduler.rs
apps/web/: Dockerfile  nginx.conf
docs/: AI_SERVER_SETUP.md  GOOGLE_CAST_RECEIVER.md  HOMELAB_DEPLOYMENT.md  PERFORMANCE_IMPROVEMENTS_PLAN.md  SELF_HOSTED_DEPLOYMENT.md  V2_BROWSER_SELF_HOSTED_PLAN.md  admin-search-rule-json.md  agent-setup.md  multi-provider-plan.md  self-hosting.md
scripts/: build-android-tv.ps1  build-apk.ps1  build-apk.sh  deploy-homelab-images.sh  deploy.sh  dev-reset.ps1  dev-reset.sh  dev-start.ps1  dev-start.sh  dev-stop.ps1  dev-stop.sh  launch-user-test-stack.ps1  prod-reset.sh  prod-stop.sh  publish-homelab-images.ps1  publish-homelab-images.sh  publish-images.ps1  publish-images.sh  run-dev-script.mjs  run-script.mjs  start-user-test-stack.ps1  start-user-test-stack.sh  stop-user-test-stack.ps1  stop-user-test-stack.sh
(+152 files in other folders)
