[package]
name = "euripus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
async-compression = { version = "0.4.20", features = ["tokio", "gzip"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cookie = "0.18.1"
dashmap = "6"
dotenvy = "0.15.7"
flate2 = "1.1.4"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
meilisearch-sdk = "0.28"
quick-xml = { version = "0.38.3", features = ["async-tokio"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-retry = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
