[package]
name = "euripus-desktop"
version = "0.1.0"
edition = "2024"

[package.metadata]

[lib]
name = "euripus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
keyring = "3.6.3"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.1", features = [] }
